--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,76 @@ body {
     background-repeat: repeat;
     /* permite movimiento */
     background-position: center;
-    animation: moverMapa 90s linear infinite;
+    animation: moverMapa 200s linear infinite;
     margin: 0;
     padding: 0;
 }
+
+
+
+html, body {
+    overflow-x: hidden !important;
+    width: 100%;
+    max-width: 100%;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+section, div, header, footer {
+    max-width: 100%;
+}
+
+.whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 25px;
+    right: 25px;
+    background-color: #25D366;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    z-index: 999;
+    animation: float 3s infinite ease-in-out;
+    text-decoration: none;
+}
+
+.wp-icon {
+    width: 32px;
+    height: 32px;
+}
+
+@keyframes float {
+    0% { transform: translateY(0); }
+    50% { transform: translateY(-6px); }
+    100% { transform: translateY(0); }
+}
+
+@media (max-width: 768px) {
+    .whatsapp-float {
+        width: 50px;
+        height: 50px;
+        right: 15px;
+        bottom: 15px;
+    }
+    .wp-icon {
+        width: 28px;
+        height: 28px;
+    }
+}
+
+
+
+
+
+
+
+
+
 
 /* Animación del mapa */
 @keyframes moverMapa {
